--- a/src/js/package.json
+++ b/src/js/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "csv-parse": "^4.3.0",
+    "request": "^2.88.2",
     "request-promise": "^4.2.2"
   },
   "devDependencies": {},
